<fix>: additional color fix and z-index

--- a/src/component/SearchBar/locationautosuggest.css
+++ b/src/component/SearchBar/locationautosuggest.css
@@ -14,7 +14,7 @@
   transition: border 0.2s ease;
 }
 .react-autosuggest__input:hover {
-  border: 1px solid var(--pale-salmon);
+  border: 1px solid var(--light-purple);
 }
 
 .react-autosuggest__input--focused {
@@ -35,7 +35,7 @@
   position: absolute;
   top: 42px;
   width: 240px;
-  border: 1px solid var(--pale-salmon);
+  border: 1px solid var(--light-purple);
   background-color: #fff;
   font-family: Helvetica, sans-serif;
   font-weight: 300;
@@ -57,5 +57,5 @@
 }
 
 .react-autosuggest__suggestion--highlighted {
-  background-color: var(--light-peach);
+  background-color: var(--light-purple);
 }
