--- a/src/page/ResultPage/resultpage.css
+++ b/src/page/ResultPage/resultpage.css
@@ -1,3 +1,4 @@
 .result-page {
     background-color: var(--light-gray);
+    z-index: 0;
 }
